# autoencoders

./: MNIST CNN AE.ipynb  MNIST MLP AE.ipynb  MNIST.ipynb  README.md  pyproject.toml
autoencoders/: cnnmodels.py  mlpmodels.py
